# AnthroProxy

./: .gitignore  LICENSE  pyproject.toml  server.py
static/: index.html
